<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AdibQoshishFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_adib_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Adib qo'shish"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_boy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/kulrang"
        android:src="@drawable/worker"
        app:layout_constraintBottom_toTopOf="@id/rasm_upload"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_adib_txt"
        app:layout_constraintWidth_percent="0.5" />

    <ProgressBar
        android:id="@+id/rasm_progress"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/img_boy"
        app:layout_constraintTop_toTopOf="@id/img_boy"
        app:layout_constraintRight_toRightOf="@id/img_boy"
        app:layout_constraintBottom_toBottomOf="@id/img_boy"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/rasm_upload"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/yashil"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/edt_adib_ismi"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_boy"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/adib_rasmi"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edt_adib_ismi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_background"
        android:hint="@string/adib_ismi_familiyasi_va_otasining_ismi"
        android:textColorHint="#979797"
        android:padding="10dp"
        android:textSize="13sp"
        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@id/edt_yili"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rasm_upload"
        app:layout_constraintWidth_percent="0.95"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/edt_yili"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_background"
        android:hint="@string/tug_ilgan_yili"
        android:textColorHint="#979797"
        android:padding="10dp"
        android:textSize="13sp"
        android:maxLength="5"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/edt_vafot_etgan_yili"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_adib_ismi"
        app:layout_constraintWidth_percent="0.95"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/edt_vafot_etgan_yili"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_background"
        android:hint="@string/vafot_etgan_yili"
        android:textColorHint="#979797"
        android:padding="10dp"
        android:textSize="13sp"
        android:maxLength="5"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_yili"
        app:layout_constraintWidth_percent="0.95"
        tools:ignore="UnusedAttribute" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_background"
        android:entries="@array/spinner_item"
        app:layout_constraintBottom_toTopOf="@id/edt_malumot"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_vafot_etgan_yili"
        app:layout_constraintWidth_percent="0.95" />

    <EditText
        android:id="@+id/edt_malumot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_background"
        android:gravity="start"
        android:hint="@string/adib_haqida_to_liq_ma_lumot"
        android:textColorHint="#979797"
        android:padding="10dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/btn_save_new_adib"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintWidth_percent="0.95"
        tools:ignore="UnusedAttribute" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_save_new_adib"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/yashil"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_malumot"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/saqlash"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>